# halkara

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: args.rs  audius.rs  main.rs  player.rs  ui.rs  utils.rs
src/audius/: playlist.rs  track.rs  trending.rs  user.rs
src/ui/: compact.rs  log.rs  ncurses.rs  utils.rs
