[package]
name = "halkara"
version = "0.2.0"
edition = "2021"

[dependencies]
bytes = "1.1.0"
clap = "3.0.10"
lazy_static = "1.4.0"
rand = "0.8.4"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
rodio = "0.14.0"
serde = { version = "1.0.134", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
