[package]
name = "halkara"
version = "0.3.0"
edition = "2021"

[dependencies]
bytes = "1.1.0"
lazy_static = "1.4.0"
ncurses = { version = "5.101.0", optional = true }
pico-args = "0.4.2"
rand = "0.8.5"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
rodio = "0.15.0"
serde = { version = "1.0.136", features = ["derive"] }
terminal_size = "0.1.17"

[profile.release]
lto = "fat"
codegen-units = 1
