[package]
name = "halkara"
version = "0.4.2"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
ncurses = { version = "5.101.0", optional = true }
pico-args = "0.5.0"
rodio = { version = "0.15.0", default-features = false, features = ["mp3"] }
serde = { version = "1.0.137", features = ["derive"] }
terminal_size = "0.1.17"
ureq = { version = "2.4.0", default-features = false, features = ["json", "tls"] }

[profile.release]
lto = "fat"
codegen-units = 1
